2008-11-30  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_to_inexact): explicit conversion to
	inexact number

	* src/bignum.c (dfsch_bignum_to_double): fix broken bignum->flonum
	conversion

	* src/conditions.c (dfsch__condition_write): do not print stack-trace

	* Makefile.am: removed generic function subsystem

2008-11-29  Ales Hakl  <ales at hakl dot net>

	* src/object.c: reasonable mesasage-passing based object system
	(which generally seems like better idea than some half-assed
	attempt at CLOS)

2008-11-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eval_impl): note evaluated expressions correctly
	added slots to some types

2008-11-26  Ales Hakl  <ales at hakl dot net>

	* doc/type-hierarchy: some incomplete chart

	* src/repl.c (main): fixed expression evaluation code

2008-11-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): inherit display function

2008-11-24  Ales Hakl  <ales at hakl dot net>

	* src/native.c: access to slots from LISP-code

	* src/dfsch.c: basic slot accessors and related C-level API 

2008-11-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: meta-type class 

2008-11-18  Ales Hakl  <ales at hakl dot net>

	* src/random.c: random number generator
	More or less complete RNG

2008-11-11  Ales Hakl  <ales at hakl dot net>

	* src/introspect.c (dfsch_format_stack_trace): pretty-print stack
	traces

	* src/dfsch.c (dfsch_apply_impl): Application of nil leads to error

2008-11-03  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_mod_inv): modular multiplicative inverse

2008-10-14  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (hash_t): only two types of hashtable (eqv? is not
	significantly useful and all usecases are covered by equal?)

	* src/bignum.c (logop): correct bitwise operations for bignums

2008-10-13  Ales Hakl  <ales at hakl dot net>

	* src/ports.c: ports for standard stdio streams

	* lib/inet.c (dfsch_inet_xml_escape): work with c strings (XML